--- a/Front-end/src/components/styles/Card.css
+++ b/Front-end/src/components/styles/Card.css
@@ -1,15 +1,58 @@
 .card{
-    background-color: rgba(109, 137, 100, 0.795);
-    margin-bottom: 2%;
-    border: 2px rgba(66, 92, 58, 0.574) solid;
-    border-radius: 15px;
-    color: rgb(207, 199, 199);
-    padding: 5px;
-    padding-bottom: 0;
-    width: 27%;
+    background-color: #406164;
+    margin-bottom: 50px;
+    border-radius: 5px;
+    color: #111c1c;
+    width: 200px;
+    height: 330px;
+}
+.card img{
+    border-radius: 5px;
+    width:200px;
+    height: 260px;
+
+}
+
+.card h3{
+    margin: 3px auto 5px 5px;
+}
+
+.card p{
+    margin: 0 auto 2px 5px;
 }
 
 .card button{
-    background-color: rgb(71, 197, 155);
-    margin: 0;
+    margin-top: 0;
+    width: 200px;
+    height: 50px;
+    padding: 0;
+}
+
+.card button:hover{
+    background-color:#D9D9D9;
+    transition: all 150ms ease-in;
+}
+
+.info {
+    max-width: 600px;
+    height: 80px;
+}
+
+@media (max-width: 600px){
+    .card{
+        width: 150px;
+        height: min-content;
+    }
+    .card img{
+        border-radius: 5px;
+        width: 150px;
+        height: 230px;
+    }
+    .card button{
+        display: block;
+        width: 150px;
+        font-size:15px;
+        padding: 0px;
+        height: 50px;
+    }
 }
