--- a/Front-end/src/components/styles/table.css
+++ b/Front-end/src/components/styles/table.css
@@ -1,10 +1,8 @@
-.carrito{
+.table-conexion{
     padding: 100px;
     padding-bottom: 500px;
 }
-h2{
-    text-align: center;
-}
+
 table{
     display: blocks;
     margin: auto;
@@ -25,21 +23,9 @@ tr{
     background-color: rgba(75, 144, 114, 0.625);
     text-align: center;
     height: 28px;
+
 }
 
 td{
     border-radius: 10px;
-}
-
-.carrito a.btn-link{
-    display: block;
-    height: 50px;
-    background-color: rgb(97, 184, 84);
-    border-radius: 15px;
-    text-align: center;
-    padding-top: 30px;
-    width: 200px;
-    color: azure;
-    margin: auto;
-    margin-top: 25px;
 }
