--- a/Front-end/src/index.css
+++ b/Front-end/src/index.css
@@ -17,6 +17,29 @@ a:-webkit-any-link {
   text-decoration: none;
 }
 
+* {
+  scrollbar-width: auto;
+  scrollbar-color: #657053 #657053;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 16px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #111C1C;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #657053;
+  border-radius: 10px;
+  border: 3px solid #111C1C;
+}
+
+.svg-image-colored {
+  filter: invert(39%) sepia(23%) saturate(418%) hue-rotate(41deg) brightness(99%) contrast(86%);
+}
 .flex-wrapper-centered {
   display: flex;
   flex-direction: column;
@@ -78,11 +101,15 @@ button {
   font-weight: 600;
   font-size: 20px;
   margin-top: 30px;
-  min-width: 200px;
+  min-width: 100px;
   background-color: #657053;
   color:#111C1C;
   border-radius: 5px;
   border: none;
   padding: 15px 25px 15px 25px;
   cursor: pointer;
+}
+
+@media (max-width: 600px){
+
 }
